# gmc-geiger-mqtt

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  HOMEASSISTANT.md  Makefile  README.md  agent-cost.md  clean_ha_entities.py  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt  run.py  test_cpm_debug.py  test_serial.py
manual_tests/: README.md  test_cpm_debug2.py  test_discovery_payloads.py  test_mqtt_messages.py
src/: __init__.py  config.py  gmc_device.py  main.py  models.py
src/gmc_geiger_mqtt/: __init__.py  config.py  gmc_device.py  main.py  models.py
src/gmc_geiger_mqtt/mqtt/: __init__.py  client.py  discovery.py  publisher.py
src/gmc_geiger_mqtt/processing/: aggregator.py
src/mqtt/: __init__.py  client.py  discovery.py  publisher.py
src/processing/: __init__.py  aggregator.py
tests/: conftest.py  test_aggregator.py  test_models.py
util/: clean_mqtt_discovery.sh
